--- a/10_26/과제_링컨자동차코리아_메인슬라이드_제작_구현/css/style.css
+++ b/10_26/과제_링컨자동차코리아_메인슬라이드_제작_구현/css/style.css
@@ -7,13 +7,29 @@
 
 #wrap #main {width:100%;position:relative;z-index:2;}
 #wrap #main #mainWrap {width:1444px;height:2269.16px;margin:0 auto;}
-#wrap #main #mainWrap #section1 {width:100%;}
-#wrap #main #mainWrap #section1 .slide-container {width:100%;height:720px;}
+#wrap #main #mainWrap #section1 {position:relative;width:100%;}
+#wrap #main #mainWrap #section1 .slide-container {position:relative;z-index:1;width:100%;height:720px;overflow:hidden;}
 #wrap #main #mainWrap #section1 .slide-view {width:1444px;height:720px;margin:0 auto;}
-#wrap #main #mainWrap #section1 .slide-wrap {width:calc(1444px*7);height:720px;margin-left:-1445px;}
+#wrap #main #mainWrap #section1 .slide-wrap {position:relative;width:calc(1444px*7);height:720px;margin-left:-1444px;}
 #wrap #main #mainWrap #section1 .slide-wrap .slide {float:left;width:1444px;height:720px;}
-#wrap #main #mainWrap #section1 .slide-wrap .slide > div {width:100%;}
-#wrap #main #mainWrap #section1 .slide-wrap .slide > div > a {width:100%;height:720px;}
-#wrap #main #mainWrap #section1 .slide-wrap .slide > div > a > img {width:100%;height:100%;}
+#wrap #main #mainWrap #section1 .slide-wrap .slide > a {width:100%;height:720px;}
+#wrap #main #mainWrap #section1 .slide-wrap .slide > a > div {width:100%;}
+#wrap #main #mainWrap #section1 .slide-wrap .slide > a > div > img {width:100%;height:100%;}
+
+#wrap #main #mainWrap #section1 .slide-btn {position:absolute;z-index:2;top:280px;right:0;width:70px;height:40px;padding:15px 0;}
+#wrap #main #mainWrap #section1 .slide-btn > ul {width:100%;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li {width:100%;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li > a {display:block;line-height:70px;text-align:center;font-size:35px;color:#fff;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li:nth-child(1) > a {background:#b45f1a;opacity:1;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li:nth-child(2) > a {background:#222;opacity:0.5;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li:hover  > a{background:#fff;color:#555;transition: all 0.6s;opacity:1;}
+#wrap #main #mainWrap #section1 .slide-btn > ul > li:focus > a {background:#fff;color:#555;transition: all 0.6s;opacity:1;}
+
+#wrap #main #mainWrap #section1 .indicator {position:relative;z-index:3;}
+#wrap #main #mainWrap #section1 .indicator > ul {position:absolute;bottom:54px;left:45%;}
+#wrap #main #mainWrap #section1 .indicator > ul > li {float:left;width:10px;height:10px;margin-left:25px;}
+#wrap #main #mainWrap #section1 .indicator > ul > li > a {display:block;height:100%;background:#fff;border-radius:50%;}
+#wrap #main #mainWrap #section1 .indicator > ul > li > a.addBtn {margin-left:-7px;margin-top:-5px;width:15px;height:15px;line-height:15px;background:inherit;border:2px solid #fff;border-radius:50%;}
+
 
 #wrap #footer {width:100%;position:relative;z-index:1;}
