링컨자동차 슬라이드 수업 - 낼 아침에 깔끔하게 다시, css  roatet도 해봐

--- a/10_26/10_26_프로젝트_링컨자동차/css/style.css
+++ b/10_26/10_26_프로젝트_링컨자동차/css/style.css
@@ -17,9 +17,17 @@
 #wrap #main #section1 .slide-container .slide-view .slide-wrap .slide div a img {width:100%;}
 
 #wrap #main #section1 .slide-container .page-btn-wrap {z-index:2;position:absolute;width:100%;bottom:50px;text-align:center;}
-#wrap #main #section1 .slide-container .page-btn-wrap li {display:inline-block;width:10px;height:10px;border:2px solid #fff;box-sizing:border-box;margin:5px;border-radius:50%;overflow:hidden;}/* 테두리를 아예 포함시켜 버리기 */
-#wrap #main #section1 .slide-container .page-btn-wrap li,addPage {width:10px;height:10px;margin:0 5px;}
-#wrap #main #section1 .slide-container .page-btn-wrap li a {display:block;width:100%;background:#fff;}
+#wrap #main #section1 .slide-container .page-btn-wrap li {display:inline-block;width:10px;height:10px;border:2px solid #fff;box-sizing:border-box;margin:5px 8px;border-radius:50%;overflow:hidden;transition:all .3s;}/* 테두리를 아예 포함시켜 버리기 */
+#wrap #main #section1 .slide-container .page-btn-wrap li.addPage {width:20px;height:20px;margin:0 8px;}
+#wrap #main #section1 .slide-container .page-btn-wrap li a {display:block;width:100%;background:#fff;transition:all .3s;}
+#wrap #main #section1 .slide-container .page-btn-wrap li.addPage a {background:transparent;}
 
+#wrap #main #section1 .slide-container .next-btn-wrap {position:absolute;z-index:2;right:0;bottom:50%;width:70px;height:70px}
+#wrap #main #section1 .slide-container .next-btn-wrap a {display:block;width:100%;height:100%;background:#c00;}
+#wrap #main #section1 .slide-container .next-btn-wrap a i {display:block;width:30px;height:30px;border:1px solid #fff;}
+
+#wrap #main #section1 .slide-container .prev-btn-wrap {position:absolute;z-index:2;right:0;top:50%;width:70px;height:70px;background:#00c;}
+#wrap #main #section1 .slide-container .prev-btn-wrap a {display:block;width:100%;height:100%;background:#c00;}
+#wrap #main #section1 .slide-container .prev-btn-wrap a i {display:block;width:30px;height:30px;border:1px solid #fff;}
 
 #wrap #footer {z-index:1;position:relative;height:700px;background:#fff;border-bottom:1px solid #ddd;}/* 임시용 */
