--- a/10_26/10_26_프로젝트_링컨자동차/css/style.css
+++ b/10_26/10_26_프로젝트_링컨자동차/css/style.css
@@ -26,8 +26,8 @@
 #wrap #main #section1 .slide-container .next-btn-wrap a {display:block;width:100%;height:100%;background:#c00;}
 #wrap #main #section1 .slide-container .next-btn-wrap a i {display:block;width:30px;height:30px;border:1px solid #fff;}
 
-#wrap #main #section1 .slide-container .prev-btn-wrap {position:absolute;z-index:2;right:0;top:50%;width:70px;height:70px;background:#00c;}
-#wrap #main #section1 .slide-container .prev-btn-wrap a {display:block;width:100%;height:100%;background:#c00;}
+#wrap #main #section1 .slide-container .prev-btn-wrap {position:absolute;z-index:2;right:0;top:50%;width:70px;height:70px;}
+#wrap #main #section1 .slide-container .prev-btn-wrap a {display:block;width:100%;height:100%;background:#00c;}
 #wrap #main #section1 .slide-container .prev-btn-wrap a i {display:block;width:30px;height:30px;border:1px solid #fff;}
 
 #wrap #footer {z-index:1;position:relative;height:700px;background:#fff;border-bottom:1px solid #ddd;}/* 임시용 */
