--- a/10_27/10_27_프로젝트_링컨자동차_슬라이드마무리_혼자하기/css/common.css
+++ b/10_27/10_27_프로젝트_링컨자동차_슬라이드마무리_혼자하기/css/common.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
-* {margin:0;padding:0;border:0;vertical-align:top;}
+* {margin:0;padding:0;border:0;}
 html, body {width:100%; height:100%;}
 html {overflow-y:scroll;}
 body {font:normal 14px/1 "Nanum Gothic","Noto Sans KR";color:#444;background:#fff;}
                          /*  1차글꼴   ,    2차글꼴  */
-header, main, footer, section, aside, nav, aside, article {display: block;}
+header, main, footer, section, aside, nav, aside {display: block;}
 
 ul, li {list-style: none;}
 a {color: #444; text-decoration: none;}
