--- a/10_28/10_28_프로젝트_스타벅스_섹션_8_혼자하기/css/style.css
+++ b/10_28/10_28_프로젝트_스타벅스_섹션_8_혼자하기/css/style.css
@@ -262,19 +262,19 @@
 
 #wrap #main #section8 .wrap {width:1100px;height:695px;}
 #wrap #main #section8 .wrap > ul {position:relative;width:100%;}
-#wrap #main #section8 .wrap > ul .left {position:relative;z-index:2;display:inline-block;top:90px;left:36%;;width:469px;height:515px;}
-#wrap #main #section8 .wrap > ul .left .image {display:block;width:100%;height:100%;}
+#wrap #main #section8 .wrap > ul .left {position:relative;z-index:2;display:inline-block;top:90px;left:20%;;width:469px;height:515px;}
+#wrap #main #section8 .wrap > ul .left .image {display:inline-block;width:100%;height:100%;}
 #wrap #main #section8 .wrap > ul .left .image img {display:block;width:100%;height:100%;}
 #wrap #main #section8 .wrap > ul .left .line  {position:absolute;z-index:2;top:48px;right:-7%;display:block;width:1px;height:430px;background:#000;opacity:.2;}
 
 
-#wrap #main #section8 .wrap > ul .right-row1 {position:relative;z-index:1;display:inline-block;bottom:150px;right:-43%;width:565px;height:83px;}
-#wrap #main #section8 .wrap > ul .right-row1 .image {display:block;width:100%;height:100%;}
+#wrap #main #section8 .wrap > ul .right-row1 {position:relative;z-index:1;display:inline-block;padding-left:770px;bottom:260px;width:565px;height:83px;}
+#wrap #main #section8 .wrap > ul .right-row1 .image {display:block;position:relative;right:0px;width:100%;height:100%;}
 #wrap #main #section8 .wrap > ul .right-row1 .image img {display:block;}
-#wrap #main #section8 .wrap > ul .right-row1 .line {position:absolute;z-index:1;bottom:-100%;right:-22%;display:block;width:1182px;height:1px;background:#000;opacity:.2;}
+#wrap #main #section8 .wrap > ul .right-row1 .line {position:absolute;z-index:1;bottom:-100%;right:-10%;display:inline-block;width:1182px;height:1px;background:#000;opacity:.2;}
 
-#wrap #main #section8 .wrap > ul .right-row2 {position:relative;display:inline-block;bottom:50px;right:-87%;width:287px;height:17px;}
-#wrap #main #section8 .wrap > ul .right-row2 .image {width:100%;height:100%;}
+#wrap #main #section8 .wrap > ul .right-row2 {position:relative;display:inline-block;padding-left:770px;bottom:150px;right:0;width:287px;height:17px;}
+#wrap #main #section8 .wrap > ul .right-row2 .image {width:100%;height:100%;position:relative;right:0;}
 #wrap #main #section8 .wrap > ul .right-row2 .image > a {display:block;width:100%;}
 #wrap #main #section8 .wrap > ul .right-row2 .image > a > img {display:block;width:100%;height:100%;}
 
