--- a/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
+++ b/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
@@ -255,45 +255,55 @@
 #wrap #main #section7 .wrap .fav-wrap {position:absolute;top:172.5px;right:-80px;width:672px;height:458px;}
 #wrap #main #section7 .wrap .fav-wrap >img {width:100%;}
 
+
+
 /* section8 */
-#wrap #main #section8 {width:100%;height:auto;background:#fff;padding:85px 0;overflow:hidden;}
-#wrap #main #section8 .wrap {position:relative;width:1100px;height:515px;margin:0 auto;}
-#wrap #main #section8 .wrap img {width:469px;margin-left:-25px;}
-#wrap #main #section8 .wrap .v-line {width:1px;height:440px;position:absolute;top:47px;left:474px;background:#ccc;}
-#wrap #main #section8 .wrap .h-line {width:800px;height:1px;position:absolute;top:339px;left:294px;background:#ccc;}
-#wrap #main #section8 .wrap .title-01 {width:565px;height:83px;position:absolute;top:180px;left:550px;}
-#wrap #main #section8 .wrap .title-01 img {width:100%;}
-#wrap #main #section8 .wrap .title-02/* 블라인드 버튼 */ {width:287px;height:17px;position:absolute;top:359px;left:523px;padding:7px 5px;transition:background-color .3s;}
-#wrap #main #section8 .wrap .title-02:hover {background:#976d3f;}
-#wrap #main #section8 .wrap .title-02:focus {background:#976d3f;}
-#wrap #main #section8 .wrap .title-02 a {display:block;width:287px;height:17px;/*화면에 보여지는 높이*/background:url(../img/btn_magazine_pc.png) no-repeat 0 0/* 0이면 맨 위가 보이고, 50%면 중간, 100%면 완전 끝쪽이 보임 */;background-size:287px 34px;/* transition:all .3s; (써주면 멋있음)*/}
-#wrap #main #section8 .wrap .title-02:hover a {background-position:0 -17px;}
-#wrap #main #section8 .wrap .title-02:focus a {background-position:0 -17px;background:#976d3f;}
-
+#wrap #main #section8 {width:100%;height:auto;background:#fff;padding:80px 0;}
+#wrap #main #section8 .wrap {position:relative;width:1100px;margin:0 auto;}
+#wrap #main #section8 .wrap .s8-left {z-index:2;position:relative;left:-30px;float:left;width:50%;}
+#wrap #main #section8 .wrap .s8-left .s8-left-img {display:block;width:469px;height:515px;}
+#wrap #main #section8 .wrap .s8-left .s8-left-img > img {width:100%;height:100%;}
+#wrap #main #section8 .wrap .s8-right {z-index:1;position:relative;float:left;width:50%;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img1 {position:relative;top:180px;left:-30px;display:block;width:565px;height:83px;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img1 > img {width:100%;height:100%;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img2 {position:relative;top:270px;left:-30px;display:block;padding:7px 10px;width:297px;height:20px;transition:background .8s;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img2:hover {background-color:#976d3f;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img2 > a {display:block;width:100%;height:16.5px;background:url(../img/btn_magazine_pc.png) no-repeat 0 0;background-size:287px 33px;}
+#wrap #main #section8 .wrap .s8-right .s8-right-img2:hover > a {background-position:0 100%;}
+/* #wrap #main #section8 .wrap .s8-right .s8-right-img2 > a:hover {} */
+#wrap #main #section8 .wrap .s8-h-line {z-index:2;position:absolute;top:45px;left:43%;width:1px;height:440px;background:#ded;}
+#wrap #main #section8 .wrap .s8-v-line {z-index:1;position:absolute;bottom:34%;left:20%;width:1034px;height:1px;background:#ded;}
 /* section9 */
-#wrap #main #section9 {width:100%;
-    background-image:url(../img/store_exp_img04.png),url(../img/store_exp_img03.png),url(../img/section9.jpg);
-    background-position:80% 100%,53% -60px ,50% 0; /* 여러개의 백그라운드 이미지 : 왼쪽이 젤 위*/
-    background-repeat:no-repeat,no-repeat  ,repeat;
-    background-size:230px 102px,343px 142px,cover;}
-#wrap #main #section9 .wrap {position:relative;width:1100px;height:400px;margin:0 auto;}
-#wrap #main #section9 .wrap .left-img-wrap {position:relative;float:left;width:50%;}
-#wrap #main #section9 .wrap .left-img-wrap .img-01 {z-index:1;position:relative;display:block;width:366px;height:312px;}/*지금 태그가 span이라 넓이높이 쓰려면 무조건 블럭써줘야댐*/
-#wrap #main #section9 .wrap .left-img-wrap .img-01 > img {width:100%;height:100%;}
-#wrap #main #section9 .wrap .left-img-wrap .img-02 {z-index:2;position:absolute;bottom:-70px;right:80px;display:block;width:228px;height:228px;}
-#wrap #main #section9 .wrap .left-img-wrap .img-02 > img {width:100%;}
-
-#wrap #main #section9 .wrap .right-title-wrap {position:relative;top:50%;margin-top:-98px;                           float:right;width:45%;}
-                                                                /*👆자기 자신을 박스 전체에서 중앙에 배치시키는 방법*/
-#wrap #main #section9 .wrap .right-title-wrap .title-01 {display:block;padding-bottom:10px;}/*패딩도 블럭상태일 때만 적용됨 ,아래로 10만큼만 띄어라 */
-#wrap #main #section9 .wrap .right-title-wrap .title-01 > img {width:auto;}
-#wrap #main #section9 .wrap .right-title-wrap .title-02 {display:block;padding-bottom:30px;}
-#wrap #main #section9 .wrap .right-title-wrap .title-02 > img {width:auto;}
-
-#wrap #main #section9 .wrap  .right-title-wrap .store-find-wrap {display:block;width:123px;height:36px;border:1px solid #222;background:transparent;border-radius:4px;font-weight:600;}
-#wrap #main #section9 .wrap  .right-title-wrap .store-find-wrap > a {display:block;line-height:36px;color:#222;text-align:center;transition:all 0.6s;}
-#wrap #main #section9 .wrap  .right-title-wrap .store-find-wrap > a:hover {background:#222;border-color:#222;color:#fff;text-decoration:underline;}
-#wrap #main #section9 .wrap  .right-title-wrap .store-find-wrap > a:focus {background:#222;border-color:#222;color:#fff;text-decoration:underline;}
-
+#wrap #main #section9 {width:100%;;margin:0 auto;
+    background:url(../img/store_exp_img03.png),url(../img/section9.jpg);
+    background-repeat:no-repeat,repeat;
+    background-position:50% -23%,50% 0;
+    background-size:343px 142px,cover;}
+#wrap #main #section9 .wrap {width:1100px;height:400px;margin:0 auto;background:url(../img/store_exp_img04.png) no-repeat 100% 100%;background-size:230px 102px;}
+#wrap #main #section9 .wrap .s9-left {position:relative;left:30px;width:50%;float:left;}
+#wrap #main #section9 .wrap .s9-left-img1 {display:block;width:366px;height:312px;}
+#wrap #main #section9 .wrap .s9-left-img1 > img {width:100%;height:100%;}
+#wrap #main #section9 .wrap .s9-left-img2 {position:absolute;top:100px;left:200px;display:block;width:228px;height:228px;}
+#wrap #main #section9 .wrap .s9-left-img2 > img {width:100%;height:100%;}
+#wrap #main #section9 .wrap .s9-right {width:40%;float:right;padding-top:80px;}
+#wrap #main #section9 .wrap .s9-right .s9-right-img1 {position:relative;display:block;width:385px;height:54px;padding-bottom:15px;}
+#wrap #main #section9 .wrap .s9-right .s9-right-img1 > img {width:100%;height:100%;}
+#wrap #main #section9 .wrap .s9-right .s9-right-img2 {position:relative;display:block;width:366px;height:61px;padding-bottom:25px;}
+#wrap #main #section9 .wrap .s9-right .s9-right-img2 > img {width:100%;height:100%;}
+#wrap #main #section9 .wrap .s9-right .s9-right-btn {position:relative;display:block;width:120px;height:35px;}
+#wrap #main #section9 .wrap .s9-right .s9-right-btn > a {display:block;width:100%;line-height:35px;color:#222;border:2px solid #222;border-radius:4px;text-align:center;background:transparent;transition: all .6s;}
+#wrap #main #section9 .wrap .s9-right .s9-right-btn > a:hover {color:#fff;font-weight:bold;background:#222;border-color:#222;text-decoration:underline;}
+#wrap #main #section9 .wrap .s9-right .s9-right-btn > a:focus {color:#fff;font-weight:bold;background:#222;border-color:#222;text-decoration:underline;}
+    
 /* footer */
 #wrap #footer {z-index:1;position:relative;width:100%;height:488px;padding:32px 0 35px;/* = 32px 0 35px 0 */background:#2c2a29;}
+#wrap #footer ul {width:100%;}
+#wrap #footer ul .footer1 {width:1100px;height:228px;margin:0 auto;}
+#wrap #footer ul .footer1 > ul {width:100%;height:184px;background:url(../img/footer_logo\ \(1\).png) no-repeat 100% 0;}
+#wrap #footer ul .footer1 > ul .footer1-COMPANY {width:20%;height:100%;background:#c99;}
+#wrap #footer ul .footer1 > ul .footer1-CORPORATE-SALES {width:20%;height:100%;background:#9c9;}
+#wrap #footer ul .footer1 > ul .footer1-PARTNERSHIP {width:20%;height:100%;background:#c99;}
+#wrap #footer ul .footer1 > ul .footer1-ONLINE-COMMUNITY {width:20%;height:100%;background:#9c9;}
+#wrap #footer ul .footer1 > ul .footer1-RECRUIT {width:20%;height:100%;background:#c99;}
+#wrap #footer ul .footer2 {width:  100%;height:80px;background:#9d9;}
+#wrap #footer ul .footer3 {width:1100px;height:180px;background:#99d;margin:0 auto;}
