--- a/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
+++ b/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
@@ -296,14 +296,22 @@
 #wrap #main #section9 .wrap .s9-right .s9-right-btn > a:focus {color:#fff;font-weight:bold;background:#222;border-color:#222;text-decoration:underline;}
     
 /* footer */
-#wrap #footer {z-index:1;position:relative;width:100%;height:488px;padding:32px 0 35px;/* = 32px 0 35px 0 */background:#2c2a29;}
-#wrap #footer ul {width:100%;}
-#wrap #footer ul .footer1 {width:1100px;height:228px;margin:0 auto;}
-#wrap #footer ul .footer1 > ul {width:100%;height:184px;background:url(../img/footer_logo\ \(1\).png) no-repeat 100% 0;}
-#wrap #footer ul .footer1 > ul .footer1-COMPANY {width:20%;height:100%;background:#c99;}
-#wrap #footer ul .footer1 > ul .footer1-CORPORATE-SALES {width:20%;height:100%;background:#9c9;}
-#wrap #footer ul .footer1 > ul .footer1-PARTNERSHIP {width:20%;height:100%;background:#c99;}
-#wrap #footer ul .footer1 > ul .footer1-ONLINE-COMMUNITY {width:20%;height:100%;background:#9c9;}
-#wrap #footer ul .footer1 > ul .footer1-RECRUIT {width:20%;height:100%;background:#c99;}
-#wrap #footer ul .footer2 {width:  100%;height:80px;background:#9d9;}
-#wrap #footer ul .footer3 {width:1100px;height:180px;background:#99d;margin:0 auto;}
+#wrap #footer {z-index:1;position:relative;width:100%;height:488px;padding:32px 0 35px;/* = 32px 0 35px 0 */background-color:#2c2a29;}
+#wrap #footer ul {width:100%;}  
+#wrap #footer ul .footer1 {width:100%;}
+#wrap #footer ul .footer1 > ul {width:1100px;margin:0 auto;/* background: #c99; */}
+#wrap #footer ul .footer1 > ul .footer1-row {width:20%;float:left;height:auto;}
+#wrap #footer ul .footer1 > ul .footer1-row > ul {width:100%;}
+#wrap #footer ul .footer1 > ul .footer1-row > ul .f1-title {width:100%;}
+#wrap #footer ul .footer1 > ul .footer1-row > ul .f1-title > a {display:block;font-size:13.5px;font-weight:500;line-height:40px;color:#fff;}
+#wrap #footer ul .footer1 > ul .footer1-row > ul > li {width:100%;}
+#wrap #footer ul .footer1 > ul .footer1-row > ul > li > a {display:block;font-size:11.5px;line-height:24px;color:#fff;}
+
+#wrap #footer ul .footer2 {width:100%;background: #282828;}
+#wrap #footer ul .footer2 > ul {width:100%;}
+#wrap #footer ul .footer2 > ul > li {float:left;width:100%;padding:20px 0;}
+#wrap #footer ul .footer2 > ul > li > img {display:block;width:189px;height:40px;}
+
+
+
+
