--- a/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
+++ b/10_29/10_29_프로젝트_스타벅스_푸터까지_혼자해보기/css/style.css
@@ -309,17 +309,22 @@
 
 #wrap #footer ul .footer2 {width:100%;background:#282828;padding:20px 0;}
 #wrap #footer ul .footer2 > ul {width:100%;}
-#wrap #footer ul .footer2 > ul .f2-wrap {width:1100px;margin:0 auto;}
+#wrap #footer ul .footer2 > ul .f2-wrap {width:1134px;margin:0 auto;}
 #wrap #footer ul .footer2 > ul .f2-wrap > li {float:left;}
-#wrap #footer ul .footer2 > ul .f2-wrap > li > a {display:block;width:180px;height:40px;}
+#wrap #footer ul .footer2 > ul .f2-wrap > li > a {display:block;width:189px;height:40px;}
 #wrap #footer ul .footer2 > ul .f2-wrap > li > a > img {display:block;width:100%;height:100%;}
 
 #wrap #footer ul .footer3 {width:100%;padding-top:30px;}
 #wrap #footer ul .footer3 > ul {width:1100px;margin:0 auto;}
 #wrap #footer ul .footer3 > ul .f3-row1 {width:100%;}
-#wrap #footer ul .footer3 > ul .f3-row1 > ul {width:100%;background:#c99;}
-#wrap #footer ul .footer3 > ul .f3-row1 > ul > li {float:left;padding:0 10px;text-align:center;}
-#wrap #footer ul .footer3 > ul .f3-row1 > ul > li > a {display:inline-block;font-size:12px;color:#fff;}
+#wrap #footer ul .footer3 > ul .f3-row1 > ul {width:100%;}
+#wrap #footer ul .footer3 > ul .f3-row1 > ul > li {float:left;}
+#wrap #footer ul .footer3 > ul .f3-row1 > ul > li > a {display:block;font-size:12px;color:#fff;padding:0 10px;border-right:1px solid #ccc;}
+#wrap #footer ul .footer3 > ul .f3-row1 > ul > li:last-child > a {border-style: none;}
+#wrap #footer ul .footer3 > ul .f3-row2 {width:100%;}
+#wrap #footer ul .footer3 > ul .f3-row2 > ul {width:502px;margin:0 auto;}
+#wrap #footer ul .footer3 > ul .f3-row2 > ul > li {float:left;margin:10px 5px;}
+#wrap #footer ul .footer3 > ul .f3-row2 > ul > li > a {display:block;width:90px;height:30px;padding:1px 8px;font-size:12px;line-height:30px;border:2px solid #fff;border-radius:4px;color:#fff;text-align:center;}
 
 
 
