--- a/10_30/10_30_프로젝트_브란도_레스토랑_반응형_웹사이트제작/css/common.css
+++ b/10_30/10_30_프로젝트_브란도_레스토랑_반응형_웹사이트제작/css/common.css
@@ -21,3 +21,7 @@ img {vertical-align:middle;}
 #skip > li {width:100%;}
 #skip > li > a {display:block;line-height:0;font-size:0;text-align:center;color:#fff;background:#333;text-decoration:underline;}
 #skip > li > a:focus {line-height:60px;font-size:20px;}
+
+
+/* wrap */
+#wrap {z-index:1;position:relative;width:100%;}
