--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/css/style.css
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/css/style.css
@@ -12,14 +12,14 @@
 /* logo */
 #wrap #header .wrap > ul > li:nth-child(1) {width:75px;}
 #wrap #header .wrap > ul > li:nth-child(1) > h1 {padding:22.5px 0;}
-#wrap #header .wrap > ul > li:nth-child(1) > h1 > a {display:inline-block;} /* inline요소이면서 block의 성질을 띈다 */
+#wrap #header .wrap > ul > li:nth-child(1) > h1 > a {display:inline-block;}
 #wrap #header .wrap > ul > li:nth-child(1) > h1 > a > img {width:75px;height:75px;}
 
 /* aside */
 #wrap #header .wrap > ul > li:nth-child(2) {width:1025px;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul {width:100%;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li {width:100%;}
-#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(1) {height:54px;text-align:right;} /* text-align은 무조건 inline으로 설정해야먹힘 */
+#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(1) {height:54px;text-align:right;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(1) #aside {display:inline-block;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(1) #aside > ul {width:100%;padding-top:7px;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(1) #aside > ul > li {display:inline-block;margin-left:25px;}
@@ -33,20 +33,18 @@
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul {display:inline-block;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li {float:left;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .main-btn {display:block;padding:10px 20px 44px 20px;color:#000;font-size:13px;font-weight:500;}
-/* #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .main-btn:hover {background:#2c2a29;color:#669900;text-decoration:underline;} (jQuery로 해버림)*/
-/* #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .main-btn:focus {background:#2c2a29;color:#669900;text-decoration:underline;} (jQuery로 해버림)*/
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .main-btn.addMainbtn {background:#2c2a29;color:#669900;text-decoration:underline;}
 
-/* sub-menu */                                                  /* 👇nav(부모):text-align=right, .sub(자손)가 부모의 성질을 가져왔으니 따로 고쳐줘됨 left로*/                    
-#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub {display:none;position:absolute;top:121px;left:0;width:100%;text-align:left;} /* top,left = 0 :항상 상단 모서리에서 나오니까 */
-/* #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li:hover .sub {display:block;} (jQuery로 해버림)*/
+/* sub-menu */                                                 
+#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub {display:none;position:absolute;top:121px;left:0;width:100%;text-align:left;} 
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul {width:100%;}
-#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li {width:100%;} /* 총 2행(행이라 float 아님) */
+#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li {width:100%;} 
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li .sub-wrap {width:1100px;margin:0 auto;padding:30px 0;}
+
 /* 1행(top) */
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) {background:#2c2a29;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul {width:100%;}
-#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul > li {float:left;width:20%;} /* 칸 6칸 너비 20% 5개 옆으로 나열 그리고 1개는 밑으로 떨어짐 */
+#wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul > li {float:left;width:20%;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul > li ul {width:100%;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul > li ul li {width:100%;line-height:22px;}
 #wrap #header .wrap > ul > li:nth-child(2) > ul > li:nth-child(2) #nav > ul > li .sub > ul > li:nth-child(1) .sub-wrap > ul > li ul li a {color:#999;font-size:12px;}
@@ -67,7 +65,7 @@
 /* main */
 #wrap #main {z-index:2;position:relative;width:100%;margin-top:123px;}
 
-/* section1 */ /* 높이가 일정하지 않아서 absolute 써줄거임 */
+/* section1 */
 #wrap #main #section1 {width:100%;height:646px;background:url(../img/section1.jpg) no-repeat 50% 0;background-size:100% 100%;}
 #wrap #main #section1 .wrap {position:relative;width:1100px;height:646px;margin:0 auto;}
 #wrap #main #section1 .wrap  span.ani-1 {opacity:0;position:absolute;bottom:-15px;left:197px;display:block;width:358.047px;height:485.219px;}
@@ -75,7 +73,7 @@
 #wrap #main #section1 .wrap  span.ani-1 > a > img {width:100%;}
 #wrap #main #section1 .wrap  span.ani-1 strong {position:absolute;left:-140px;bottom:110px;width:190px;height:46px;}
 #wrap #main #section1 .wrap  span.ani-1 strong img {width:100%;}
-/* span이 인라인요소라서 클래스 이미 써줬지만 헷갈리니까 그냥 한 번 더 써준거임 */
+
 #wrap #main #section1 .wrap  span.ani-2 {position:absolute;bottom:70px;left:415px;display:block;width:379.047px;height:426.234px;}
 #wrap #main #section1 .wrap  span.ani-2 > a {display:block;}
 #wrap #main #section1 .wrap  span.ani-2 > a > img {width:100%;}
@@ -101,26 +99,24 @@
 #wrap #main #section1 .wrap  span.ani-6 {position:absolute;top:234px;left:0;display:block;width:123px;height:36px;border:2px solid #fff;border-radius:4px;font-weight:600;}
 #wrap #main #section1 .wrap  span.ani-6 a {display:block;line-height:36px;color:#fff;text-align:center;transition:all 0.4s;}
 #wrap #main #section1 .wrap  span.ani-6 a:hover {background:#e5bb95;color:#000;text-decoration:underline;}
+
 /* section2 */
 #wrap #main #section2 {width:100%;}
-#wrap #main #section2 > ul {width:100%;} /* > = 절대경로 */
-#wrap #main #section2 > ul > li {float:left;width:50%;height:62px;} /* 박스블록은 높이가 없으면 사각형이 안되니까 브라우저에 안나옴 */
+#wrap #main #section2 > ul {width:100%;} 
+#wrap #main #section2 > ul > li {float:left;width:50%;height:62px;}
 #wrap #main #section2 > ul > li:nth-child(1) {position:relative;z-index:2;background:#000;}
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap {position:relative;float:right;width:550px;height:62px;} 
-/* #wrap #main #section2 > ul > li:nth-child(1) .left-wrap {float:right;width:550px;height:62px;background:#cc9;}  */
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-title {line-height:62px;vertical-align:middle;}
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-title > img {width:65px;}
 
-#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list {position:absolute;left:80px;top:19px;width:400px;height:24px;overflow:hidden;}/* height 지정후 overflow하면 높이만 보이고 나머지 가려짐 */
-#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li {z-index:2;width:100%;height:24px;position:absolute;left:0;/*부모에서 다시 자리값을 잡아주는거니까 0*/top:24px;} /* 부모영역에 높이가 있어야 자식이 abs일때 화면에 보여짐 */
+#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list {position:absolute;left:80px;top:19px;width:400px;height:24px;overflow:hidden;}
+#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li {z-index:2;width:100%;height:24px;position:absolute;left:0;top:24px;} 
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li:nth-child(1) {z-index:1;top:0;}
-/* #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li:nth-child(2) {z-index:3;top:24px;} */
-#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li > a {display:block;padding:5px 0;background:#000;font-size:14px;color:#fff;}/* a링크만 cursor되어야됨 */
+#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-list > li > a {display:block;padding:5px 0;background:#000;font-size:14px;color:#fff;}
 
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-more {position:absolute;right:-62px;top:0;width:62px;height:62px;background:#000;line-height:62px;}
-#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-more > a {display:inline-block;}/* margin-top:13px; 써도 됨 */
+#wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-more > a {display:inline-block;}
 #wrap #main #section2 > ul > li:nth-child(1) .left-wrap .notice-more > a > img {width:36px;height:36px;}
-
 
 #wrap #main #section2 > ul > li:nth-child(2) {position:relative;z-index:1;background:#f6f5ef;}
 #wrap #main #section2 > ul > li:nth-child(2) .right-wrap {width:550px;height:62px;text-align:right;}
@@ -128,7 +124,6 @@
 #wrap #main #section2 > ul > li:nth-child(2) .right-wrap > h2 > a {display:block;width:100%;height:100%;text-align:left;background:url(../img/btn_prom_down.png) no-repeat 100% 50%;}
 #wrap #main #section2 > ul > li:nth-child(2) .right-wrap > h2 > a.addUp {background-image:url(../img/btn_prom_up.png);}
 #wrap #main #section2 > ul > li:nth-child(2) .right-wrap > h2 > a >img {width:129px;height:17px;padding:9.5px 0;}
-
 
 /* section3 */
 #wrap #main #section3 {display:none;width:100%;border-top:1px solid #f6f5ef;background:#f6f5ef;}
