--- a/10_30/10_30_프로젝트_스타벅스_알드라이브용/css/style.css
+++ b/10_30/10_30_프로젝트_스타벅스_알드라이브용/css/style.css
@@ -227,10 +227,10 @@
 
 
 /* section7 */
-#wrap #main #section7 {width:100%;height:800px;background:url(../img/section7.jpg) no-repeat 50% 0/* position:(양 옆 50%, 위에 고정 0) */ fixed;background-size:cover;}
+#wrap #main #section7 {width:100%;height:800px;background:url(../img/section7.jpg) no-repeat 50% 0 fixed;background-size:cover;}
 #wrap #main #section7 .wrap {position:relative;width:1100px;margin:0 auto;}
-#wrap #main #section7 .wrap > h2 {padding-top:172.5px;position:relative;left:0;width:372px;text-align:right;}/* 애니메이션때문에 position */
-#wrap #main #section7 .wrap > h3 {padding:30px 0;position:relative;left:0;width:372px;text-align:right;}/* 애니메이션때문에 position */
+#wrap #main #section7 .wrap > h2 {padding-top:172.5px;position:relative;left:0;width:372px;text-align:right;}
+#wrap #main #section7 .wrap > h3 {padding:30px 0;position:relative;left:0;width:372px;text-align:right;}
 #wrap #main #section7 .wrap > p {position:relative;left:0;width:372px;text-align:right;}
 #wrap #main #section7 .wrap > p .btn-wrap {display:inline-block;width:120px;height:35px;}
 #wrap #main #section7 .wrap > p .btn-wrap > a {display:block;width:100%;line-height:35px;color:#fff;border:2px solid #fff;border-radius:4px;text-align:center;background:transparent;transition: all .4s;}
